2003-10-15  Roland Cassebohm  <roland.cassebohm@visionsystems.de>

	* src/sys/net/if.c (ifinit): Change printf(...) to log(LOG_INIT,...) to
        make it possible to disable output while initialization.
 
2003-09-17  Reinhard Jessich  <Reinhard.Jessich@frequentis.com>

	* src/sys/kern/uipc_mbuf.c: Now using flags (how) argument in call to
	cyg_net_mbuf_alloc, to avoid a (blocking) call to alloc method of mempool 
	during interrupts. This problem occurred under heavy IP traffic in case the 
	mempool became empty (alloc blocked).
	* src/sys/net/if_ethersubr.c: Avoid dereferencing NULL pointer in case of
	failing m_copy. Note that this problem was (at least sometimes) hidden 
	due to the bug in uipc_mbuf.c (described above).

2003-09-08  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/support.c (read_random): New function which is needed
	when CYGSEM_NET_RANDOMID is enabled.
	* include/sys/param.h: Prototype for new function.

2003-07-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/netinet/icmp_var.h 
	* include/netinet/igmp_var.h
	* include/netinet/in_var.h
	* include/netinet/udp_var.h
	* include/netinet6/tcp6_var.h
	* include/netinet6/udp6_var.h
	* include/sys/socket.h
	* src/sys/net/if.c
	* src/sys/net/if_ethersubr.c
	* src/sys/net/rtsock.c
	* sys/netinet/if_ether.c
	* sys/netinet/igmp.c
	* src/sys/netinet/in.c
	* src/sys/netinet/in_pcb.c
	* src/sys/netinet/in_proto.c
	* src/sys/netinet/in_rmx.c
	* src/sys/netinet/ip_flow.c
	* src/sys/netinet/ip_icmp.c
	* src/sys/netinet/ip_input.c
	* src/sys/netinet/ip_output.c
	* src/sys/netinet/raw_ip.c
	* src/sys/netinet/tcp_input.c
	* src/sys/netinet/tcp_output.c
	* src/sys/netinet/tcp_output.c
	* src/sys/netinet/tcp_subr.c
	* src/sys/netinet/tcp_timer.c
	* src/sys/netinet/tcp_usrreq.c
	* src/sys/netinet/udp_usrreq.c
	* src/sys/netinet6/in6_proto.c
	* src/sys/netinet6/in6_rmx.c
	* src/sys/netinet6/nd6.c
	* src/sys/netinet6/udp6_output.c
	* sys/netinet6/udp6_usrreq.c: Added back the support for sysctl 